--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern_shopping_list",
+  "name": "webapp-project",
   "version": "1.0.0",
-  "description": "Shopping List with MERN",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
@@ -10,7 +10,7 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "Syed Emad",
+  "author": "neha",
   "license": "MIT",
   "dependencies": {
     "admin-bro": "^2.1.0-beta.15",
