--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express-session": "^1.17.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "react-select": "^3.0.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
