--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
     "multer": "^1.4.2",
-    "react-select": "^3.0.8"
+    "react-select": "^3.0.8",
+    "react-step-wizard": "^5.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
