--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "client": "file:client",
     "concurrently": "^5.1.0",
     "config": "^3.3.0",
+    "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -29,7 +30,8 @@
     "express-session": "^1.17.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
-    "multer": "^1.4.2",
+    "multer": "^0.1.8",
+    "multi-part": "^3.0.0",
     "react-select": "^3.0.8",
     "react-step-wizard": "^5.3.2"
   },
