--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.9.5",
     "multer": "^0.1.8",
     "multi-part": "^3.0.0",
+    "react-fade-in": "^1.0.0",
     "react-select": "^3.0.8",
     "react-step-wizard": "^5.3.2"
   },
