--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
+    "infinite-react-carousel": "^1.2.11",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
     "react-fade-in": "^1.0.0",
+    "react-script-tag": "^1.1.2",
     "react-transitions": "^1.0.0"
   },
   "devDependencies": {
