teacher dashboard to db

--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.0",
+    "infinite-react-carousel": "^1.2.11",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
-    "multer": "^0.1.8",
+    "multer": "^1.4.2",
     "multi-part": "^3.0.0",
     "react-fade-in": "^1.0.0",
     "react-select": "^3.0.8",
