--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^1.4.2",
     "multi-part": "^3.0.0",
     "react-fade-in": "^1.0.0",
+    "react-if": "^3.4.3",
     "react-select": "^3.0.8",
     "react-step-wizard": "^5.3.2"
   },
