--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
     "react-fade-in": "^1.0.0",
+    "react-if": "^3.4.3",
     "react-script-tag": "^1.1.2",
     "react-transitions": "^1.0.0"
   },
