--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "admin-bro": "^2.1.0-beta.15",
     "admin-bro-expressjs": "^2.0.0",
     "admin-bro-mongoose": "^0.4.2",
+    "agora-rtc-sdk": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "client": "file:client",
