--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,19 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "node-modules": "^1.0.1",
+    "query-string": "^6.12.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-emoji": "^0.5.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-scroll-to-bottom": "^2.0.0",
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "uuid": "^7.0.2"
   },
   "scripts": {
