--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-fade-in": "^1.0.0",
     "react-if": "^3.4.3",
     "react-script-tag": "^1.1.2",
-    "react-transitions": "^1.0.0"
+    "react-transitions": "^1.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
