--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "neha",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
     "admin-bro": "^2.1.0-beta.15",
     "admin-bro-expressjs": "^2.0.0",
     "admin-bro-mongoose": "^0.4.2",
