--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express-formidable": "^1.2.0",
     "infinite-react-carousel": "^1.2.11",
     "jsonwebtoken": "^8.5.1",
+    "material-ui": "^0.20.2",
     "mongoose": "^5.9.4",
+    "react-bootstrap": "^1.0.1",
     "react-fade-in": "^1.0.0",
     "react-if": "^3.4.3",
     "react-script-tag": "^1.1.2",
