--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-bootstrap": "^1.0.1",
     "react-fade-in": "^1.0.0",
     "react-if": "^3.4.3",
+    "react-modal": "^3.11.2",
     "react-script-tag": "^1.1.2",
     "react-transitions": "^1.0.0",
     "socket.io": "^2.3.0"
